// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with comments with next page renders correctly 1`] = `
<FlatList
  ListFooterComponent={
    <Translate(LoadMore)
      onPress={[Function]}
    />
  }
  data={
    Array [
      Object {
        "content": "some comment",
      },
      Object {
        "content": "another comment",
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  refreshControl={
    <MyRefreshControl
      colors={
        Array [
          "#ffffff",
          "#52C5DC",
        ]
      }
      onRefresh={[Function]}
      progressBackgroundColor="#007398"
      refreshing={false}
      tintColor="#007398"
    />
  }
  renderItem={[Function]}
  scrollEventThrottle={50}
  style={
    Object {
      "marginHorizontal": 20,
    }
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`with comments with next page renders item correctly 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#E6E8EC",
      "borderRadius": 8,
      "marginVertical": 5,
      "paddingHorizontal": 10,
      "paddingVertical": 5,
    }
  }
>
  <ItemHeaderText
    text="Roger Goers"
  />
  <MyText
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "paddingVertical": 3,
      }
    }
  >
    hello roge
  </MyText>
  <CardTime
    date="2018-06-11 12:00:00 UTC"
  />
</Component>
`;

exports[`with comments without next page renders correctly 1`] = `
<FlatList
  data={
    Array [
      Object {
        "content": "some comment",
      },
      Object {
        "content": "another comment",
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  refreshControl={
    <MyRefreshControl
      colors={
        Array [
          "#ffffff",
          "#52C5DC",
        ]
      }
      onRefresh={[Function]}
      progressBackgroundColor="#007398"
      refreshing={false}
      tintColor="#007398"
    />
  }
  renderItem={[Function]}
  scrollEventThrottle={50}
  style={
    Object {
      "marginHorizontal": 20,
    }
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`with no comments renders correctly 1`] = `
<FlatList
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  refreshControl={
    <MyRefreshControl
      colors={
        Array [
          "#ffffff",
          "#52C5DC",
        ]
      }
      onRefresh={[Function]}
      progressBackgroundColor="#007398"
      refreshing={false}
      tintColor="#007398"
    />
  }
  renderItem={[Function]}
  scrollEventThrottle={50}
  style={
    Object {
      "marginHorizontal": 20,
    }
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;
